Fix header jump when using main navigation.

--- a/src/components/nav.module.css
+++ b/src/components/nav.module.css
@@ -1,7 +1,7 @@
 nav {
   input:checked ~ div {
     max-height: none;
-    @apply pb-6;
+    @apply pb-6 md:pb-0;
   }
 
   input:checked ~ label {
